Teste de unidade

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,5 @@
 /BarbeariaShop/BarbeariaShop.API/obj
 /BarbeariaShop/BarbeariaShop.Relatório/bin/Debug/net8.0
 /BarbeariaShop/BarbeariaShop.Relatório/obj
+/BarbeariaShop/Barber.Test/bin/Debug/net8.0
+/BarbeariaShop/Barber.Test/obj
